--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,8 @@
         @apply bg-[#f8f9fa] p-3 rounded-md ring-gray-200 text-sm text-gray-800 hover:ring-1 focus:outline-none active:ring-gray-300;
     }
 }
+
+img {
+    width: auto;
+    height: auto;
+}
